# Lexiva

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.bat  run.py  run.sh
.workbuddy/memory/: 2026-04-11.md
.workbuddy/plans/: ai-model-config_50343f83.md  fix-listening-audio-writing-correction_c54e0ba0.md  week4-listening-stats_7b57ad0a.md
backend/: .env.example  main.py  requirements.txt
backend/api/: chat.py  dictation.py  grammar.py  listening.py  pronunciation.py  settings.py  statistics.py  vocabulary.py  writing.py
backend/db/: connection.py
backend/models/: __init__.py
backend/services/: ai_chat.py  ai_tts.py  ai_whisper.py  writing.py
backend/websocket/: manager.py
docs/: AI英语学习系统体验优先版技术方案.md  AI英语学习系统学生版技术方案.md  本地AI语音通话（流式+自动打断+高颜值+轻量高音质）.md
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts  settings.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts
frontend/src/styles/: main.css
frontend/src/views/: Chat.vue  Dictation.vue  Grammar.vue  Home.vue  Listening.vue  PhoneCall.vue  PhoneCallPanel.vue  Pronunciation.vue  Settings.vue  Stats.vue  Vocabulary.vue  Writing.vue
